# chat

./: .gitignore  README.md
ChatServer/: CMakeLists.txt  PropertySheet.props
ChatServer/cmake/: Dependencies.cmake  ThirdPartyTargets.cmake  ThirdPartyTargetsLinux.cmake  ThirdPartyTargetsWindows.cmake
ChatServer/config/: config.ini
ChatServer/include/: MysqlDao.h  const.h
ChatServer/source/: AsioIOServicePool.cpp  ChatServiceImpl.cpp
GateServer/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
GateServer/VarifyServer/: config.js  config.json  package-lock.json  package.json  proto.js  server.js
GateServer/cmake/: Dependencies.cmake  ThirdPartyTargets.cmake  ThirdPartyTargetsLinux.cmake  ThirdPartyTargetsWindows.cmake
GateServer/config/: config.ini
GateServer/docs/: DEPENDENCIES.md
GateServer/include/: CServer.h  HttpConnection.h  LogicSystem.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h
GateServer/source/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp
StatusServer/: .gitignore  CMakeLists.txt  PropertySheet.props
StatusServer/cmake/: Dependencies.cmake  ThirdPartyTargets.cmake  ThirdPartyTargetsLinux.cmake  ThirdPartyTargetsWindows.cmake
StatusServer/include/: AsioIOServicePool.h  ConfigMgr.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  Singleton.h  const.h
StatusServer/source/: MysqlDao.cpp  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp
life/: HttpMgr.h  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserwid.cpp  chatuserwid.h  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  customizeedit.cpp  customizeedit.h  global.cpp  global.h  httpmgr.cpp  life.pro  listitembase.cpp  listitembase.h  loadingdlg.cpp  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  picturebubble.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  (+10 more)
life/style/: stylesheet.qss
